--- a/app/src/main/res/layout/item_blutooth_device.xml
+++ b/app/src/main/res/layout/item_blutooth_device.xml
@@ -60,6 +60,26 @@
                 android:text="RSSI" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/text_uuid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1"
+                android:textSize="15sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="UUID" />
+        </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
